# Franchized_Gambling

./: docker-compose.yml  package-lock.json  package.json
backend/: .env  Cargo.toml  README.md
backend/src/: main.rs
backend/src/games/: flip.rs  map.rs  mod.rs  shop.rs  spinwheel.rs
backend/src/model/: building.rs  mod.rs  spin.rs  success.rs  user.rs
backend/src/response/: mod.rs
backend/src/user/: delete_user.rs  info.rs  login.rs  logout.rs  mod.rs  signup.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/assets/tilesets/: base.tsx  map.json  map.tmx
frontend/src/components/: Cards.jsx  Filling.jsx  Footer.jsx  Game.jsx  Hero.jsx  House.jsx  Leaderboard.css  Leaderboard.jsx  Login.jsx  Navbar.jsx  Overview.jsx  Shop.jsx  SpinWheel.jsx  User.jsx
frontend/src/components/house-games/: CoinFlip.css  CoinFlip.jsx
frontend/src/phaser/: scene.js
